# diff-gitignore-filter

./: .actrc  .codecov.yml  .gitignore  .gitmessage  .lefthook.yml  .secrets.dist  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  cliff.toml
.github/workflows/: automated-tests.yml  release.yml
benches/: performance.rs
man/: diff-gitignore-filter.1
scripts/: release.sh
scripts/config/: commit-validation.conf  release.conf
scripts/hooks/: post-bump.sh  post-release.sh  pre-bump.sh  pre-release.sh
scripts/lib/: commit-validator.sh  common.sh  rollback.sh  version-utils.sh
src/: error.rs  filter.rs  lib.rs  main.rs  root_finder.rs
src/config/: app_config.rs  git_config.rs  git_reader.rs  mod.rs
tests/: advanced_integration_tests.rs  advanced_utilities_tests.rs  benchmark_tests.rs  cli_integration_tests.rs  downstream_vcs_integration_test.rs  framework_tests.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  regression_tests.rs  unit_tests.rs  vcs_filter_tests.rs  worktree_tests.rs
tests/benchmarks/: framework_performance.rs  mod.rs
tests/common/: framework.rs  mod.rs  test_utilities.rs
tests/fixtures/: complex_gitignore.txt  realsample_jira_cli.diff  sample_diff.txt  very_long_pattern_gitignore.txt
